[metadata]
name = lagraph
version = 3.3.3
description = Python wheel containing prebuilt GraphBLAS/LAGraph shared libraries and header files.
author = Tobias Bergkvist
author_email = tobias@bergkv.ist
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
  Programming Language :: Python :: 3