[metadata]
name = lagraph
version = 3.3.3
home_page = https://github.com/bergkvist/pylagraph
description = Python wheel containing prebuilt GraphBLAS/LAGraph shared libraries and header files.
author = Tobias Bergkvist
author_email = tobias@bergkv.ist
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
  Programming Language :: Python :: 3
