[metadata]
name = rpathtool
version = 0.2.0
home_page = https://github.com/bergkvist/pylagraph
description = Patch C extensions to link to shared libraries at relative path
author = Tobias Bergkvist
author_email = tobias@bergkv.ist
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
  Programming Language :: Python :: 3
